k8s/db-client/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spiffe-edb-demo
  labels:
    app.kubernetes.io/name: spiffe-edb-demo
    app.kubernetes.io/part-of: spiffe-demo
