k8s/db-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-client-app
  namespace: spiffe-edb-demo
  labels:
    app: db-client-app
spec:
  selector:
    app: db-client-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
